tests/syntax_error.kaos
void num def a()
    print "inside function a"
    num val1 = 5
    print val1
end
